Added Host Game and Join Game Page
- Join Game: Background with bitmap (background-picture does not stretch anymore), Back-Button,Input Parameters, Join Button
- Host Game: Background with bitmap (background-picture does not stretch anymore), Back-Button,Input Parameters (SeekBar with a TextView that displays the selected amount), Create Lobby Button
- Edited the Home Page in order to be linked to the Host Game and Join Game Page
- added fullscreen view
- added that the navigation bar disappears in the app
- added databinding in build.gradle, to always generate the binding classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="name">Name</string>
     <string name="join">Join</string>
     <string name="key">Key</string>
+    <string name="background">Background</string>
+    <string name="number_of_players">Number of players</string>
+    <string name="maximum_time">Maximum Time</string>
+    <string name="username">Username</string>
+    <string name="lobbyname">Lobbyname</string>
+    <string name="create_lobby">Create Lobby</string>
+    <string name="game_key">Game Key</string>
 </resources>
