--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="lobbyname">Lobbyname</string>
     <string name="create_lobby">Create Lobby</string>
     <string name="game_key">Game Key</string>
+    <string name="settings">Settings</string>
+    <string name="back">Back</string>
+    <string name="sound">Sound</string>
+    <string name="placeholder">Placeholder</string>
+    <string name="save">Save</string>
+    <string name="test142763">Test142763</string>
 </resources>
