--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="placeholder">Placeholder</string>
     <string name="save">Save</string>
     <string name="test142763">Test142763</string>
+    <string name="maximum_time_min">Maximum Time (min)</string>
 </resources>
