Changed App-Name to Monopoly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="save">Save</string>
     <string name="test142763">Test142763</string>
     <string name="maximum_time_min">Maximum Time (min)</string>
+    <string name="app_name_uppercase">Monopoly</string>
 </resources>
