feat: created Lobby Page (Table with sample data, Back-Button, textView for key (not yet displayable)) fix(HostGame): changed seekBar values to contain more reasonable values feat(HostGame): added Error Checks for editText, added simple Key-Generator method (4-digit int) feat(JoinGame): added Error Checks for editText

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="test142763">Test142763</string>
     <string name="maximum_time_min">Maximum Time (min)</string>
     <string name="app_name_uppercase">Monopoly</string>
+    <string name="lobby">Lobby</string>
+    <string name="start_game">Start Game</string>
 </resources>
