--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="app_name_uppercase">Monopoly</string>
     <string name="lobby">Lobby</string>
     <string name="start_game">Start Game</string>
+    <string name="leave">Leave</string>
 </resources>
