--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">monopoly</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Test Monopoly</string>
+    <string name="title_activity_server">ServerActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -9,27 +9,4 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="join_game">Join Game</string>
-    <string name="host_game">Host Game</string>
-    <string name="monopoly">Monopoly</string>
-    <string name="name">Name</string>
-    <string name="join">Join</string>
-    <string name="key">Key</string>
-    <string name="background">Background</string>
-    <string name="number_of_players">Number of players</string>
-    <string name="maximum_time">Maximum Time</string>
-    <string name="username">Username</string>
-    <string name="lobbyname">Lobbyname</string>
-    <string name="create_lobby">Create Lobby</string>
-    <string name="game_key">Game Key</string>
-    <string name="settings">Settings</string>
-    <string name="back">Back</string>
-    <string name="sound">Sound</string>
-    <string name="placeholder">Placeholder</string>
-    <string name="save">Save</string>
-    <string name="test142763">Test142763</string>
-    <string name="maximum_time_min">Maximum Time (min)</string>
-    <string name="app_name_uppercase">Monopoly</string>
-    <string name="lobby">Lobby</string>
-    <string name="start_game">Start Game</string>
 </resources>
