--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="lobby">Lobby</string>
     <string name="start_game">Start Game</string>
     <string name="leave">Leave</string>
+    <string name="uncover">uncover</string>
 </resources>
